<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.logonrm.configuracaopersonagem.PersonagemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cabecalho">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/titulo_criar_personagem"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/cabecalho"
        android:layout_above="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <LinearLayout
          android:padding="16dp"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/label_nome_do_personagem"/>

          <EditText
              android:id="@+id/etNome"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/label_sexo"/>

          <RadioGroup
              android:id="@+id/rgSexo"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
          <RadioButton
              android:id="@+id/rbMasculino"
              android:layout_weight="0.5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/label_masculino"/>

          <RadioButton
              android:id="@+id/rbFeminino"
              android:layout_weight="0.5"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/label_feminino"/>
          </RadioGroup>

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/label_classe"/>

          <Spinner
              android:id="@+id/spClasse"
              android:entries="@array/classes"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/label_forca"/>

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="right"
              android:text="0"/>

          <SeekBar
              android:id="@+id/spForca"
              android:max="10"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

          <Button
              android:id="@+id/btCriar"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/but_criar"/>

      </LinearLayout>

    </ScrollView>


<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/rodape"
    android:layout_alignParentBottom="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/label_rodape">

    </TextView>

</RelativeLayout>


</RelativeLayout>
